--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -9,7 +8,7 @@
     </parent>
 
     <artifactId>ssh-slaves</artifactId>
-    <version>1.6-SNAPSHOT</version>
+    <version>1.5-INFONOVA-1</version>
     <packaging>hpi</packaging>
 
     <name>Jenkins SSH Slaves plugin</name>
@@ -37,9 +36,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk</connection>
-        <developerConnection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk</developerConnection>
-        <url>http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk</url>
+        <connection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/tags/ssh-slaves-1.5-INFONOVA-1</connection>
+        <developerConnection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/tags/ssh-slaves-1.5-INFONOVA-1</developerConnection>
+        <url>http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/tags/ssh-slaves-1.5-INFONOVA-1</url>
     </scm>
 
     <distributionManagement>
