--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>ssh-slaves</artifactId>
-    <version>1.5-INFONOVA-2-SNAPSHOT</version>
+    <version>1.5-INFONOVA-2</version>
     <packaging>hpi</packaging>
 
     <name>Jenkins SSH Slaves plugin</name>
@@ -36,9 +36,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk</connection>
-        <developerConnection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk</developerConnection>
-        <url>http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/trunk</url>
+        <connection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/tags/ssh-slaves-1.5-INFONOVA-2</connection>
+        <developerConnection>scm:svn:http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/tags/ssh-slaves-1.5-INFONOVA-2</developerConnection>
+        <url>http://grzsvn01.infonova.at/ise/tools/jenkins/plugins/ssh-slaves-plugin/tags/ssh-slaves-1.5-INFONOVA-2</url>
     </scm>
 
     <distributionManagement>
